# stats-test-analyzer

./: .gitignore  .replit  README.md  ab_test.py  app.py  build-frontend.sh  package-lock.json  package.json  pyproject.toml  replit.md  statistical_analysis.py
frontend/: .npmrc  angular.json  build-angular.sh  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
frontend/src/app/components/ab-test-form/: ab-test-form.component.html  ab-test-form.component.ts
frontend/src/app/components/ab-test-results/: ab-test-results.component.html  ab-test-results.component.scss  ab-test-results.component.ts
frontend/src/app/components/conversion-chart/: conversion-chart.component.html  conversion-chart.component.scss  conversion-chart.component.ts
frontend/src/app/components/home/: home.component.html  home.component.ts
frontend/src/app/components/navbar/: navbar.component.html  navbar.component.ts
frontend/src/app/components/statistical-concepts/: statistical-concepts.component.html  statistical-concepts.component.scss  statistical-concepts.component.ts
frontend/src/app/models/: ab-test.model.ts
frontend/src/app/services/: ab-test.service.ts
static/css/: custom.css  style.css
static/js/: app.js  script.js
templates/: index.html  layout.html
