[project]
name = "statistical-analysis-platform"
version = "1.0.0"
description = "Statistical Significance Testing Platform with comprehensive A/B test analysis and advanced statistical methods"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.3",
]
